--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,4 +1,4 @@
-{ "extends": "./tsconfig.json"
+{ "extends": "./tsconfig.base.json"
 , "compilerOptions":
 { "plugins": [{ "name": "typescript-plugin-css-modules" }]
 }
